RESOLVED FIXED163913
[CSS Parser] Fix :lang argument parsing
https://bugs.webkit.org/show_bug.cgi?id=163913
Summary [CSS Parser] Fix :lang argument parsing
Dave Hyatt
Reported 2016-10-24 14:39:36 PDT
Fix :lang argument parsing to support a list rather than a single identifier.
Attachments
Patch (10.98 KB, patch)
2016-10-24 14:42 PDT, Dave Hyatt
zalan: review+
Dave Hyatt
Comment 1 2016-10-24 14:42:02 PDT
Dave Hyatt
Comment 2 2016-10-24 14:54:40 PDT
Landed in r207783.
Ryan Haddad
Comment 4 2016-10-24 17:14:29 PDT
Reverted r207783 for reason: This change appears to have caused fast/selectors/invalid-functional-pseudo-class.html to crash on iOS and macOS Committed r207790: <http://trac.webkit.org/changeset/207790>
Note You need to log in before you can comment on or make changes to this bug.