[CSS Parser] Fix :lang argument parsing https://bugs.webkit.org/show_bug.cgi?id=163913

Reviewed by Zalan Bujtas.

* css/SelectorPseudoClassAndCompatibilityElementMap.in:
Modify the map to support versions of the function pseudos
without the left paren included.

* css/parser/CSSParserValues.cpp:
(WebCore::CSSParserSelector::setLangArgumentList):
* css/parser/CSSParserValues.h:
Add a helper to just directly pass an AtomicString Vector through.

* css/parser/CSSSelectorParser.cpp:
(WebCore::consumeLangArgumentList):
(WebCore::CSSSelectorParser::consumePseudo):
Add a new consumeLangArgumentList to collect the languages into
an AtomicString Vector.



Canonical link: https://commits.webkit.org/181644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207783 268f45cc-cd09-0410-ab3c-d52691b4dbfc